feat: generate control plane TLS certificate

--- a/tls/tasks/main.yml
+++ b/tls/tasks/main.yml
@@ -2,3 +2,7 @@
   ansible.builtin.include_tasks:
     file: ca.yml
   when: create_ca
+- name: Generate control plane TLS certificate
+  ansible.builtin.include_tasks:
+    admin.yml
+  when: create_admin
