feat: generate controller manager TLS certificate

--- a/bootstrap-workers.yml
+++ b/bootstrap-workers.yml
@@ -6,3 +6,6 @@
     - name: Import role bootstrap
       ansible.builtin.include_role:
         name: bootstrap
+    - name: Import tls role
+      ansible.builtin.include_role:
+        name: tls
