--- a/bootstrap-controlplane.yml
+++ b/bootstrap-controlplane.yml
@@ -11,4 +11,5 @@
         name: tls
       vars:
         create_ca: true
-        create_admin: true
+        create_apiserver: true
+        create_controller_manager: true
