--- a/tls/defaults/main.yml
+++ b/tls/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 create_ca: false
 create_apiserver: false
+create_admin: false
 create_kubelet: true
 create_controller_manager: false
 create_scheduler: false
+create_serviceaccount: false
