--- a/bootstrap/tasks/main.yml
+++ b/bootstrap/tasks/main.yml
@@ -1,10 +1,8 @@
 ---
 - name: Enable IP Forwarding permanently
-  ansible.builtin.lineinfile:
+  ansible.builtin.copy:
+    content: net.ipv4.ip_forward = 1
     dest: /etc/sysctl.d/20-ipforward.conf
-    line: |
-      net.ipv4.ip_forward = 1
-    create: true
     mode: "0644"
 - name: Reload sysctl
   ansible.builtin.shell: sysctl --system
