--- a/bootstrap-workers.yml
+++ b/bootstrap-workers.yml
@@ -9,3 +9,9 @@
     - name: Import tls role
       ansible.builtin.include_role:
         name: tls
+    - name: Import kubeconfig role
+      ansible.builtin.include_role:
+        name: kubeconfig
+      vars:
+        apiserver_ip: "{{ hostvars[inventory_hostname].ansible_facts.all_ipv6_addresses[-1] }}"
+        is_controlplane: true
