wip(etcd): add peer name and data dir

--- a/etcd/tasks/configure.yml
+++ b/etcd/tasks/configure.yml
@@ -25,6 +25,6 @@
 - name: Start etcd service
   ansible.builtin.systemd_service:
     name: etcd.service
-    state: restarted
+    state: restarted # todo: started
     enabled: true
     daemon_reload: true
