--- a/bootstrap-workers.yml
+++ b/bootstrap-workers.yml
@@ -1,7 +1,10 @@
 - name: Bootstrap Kubernetes worker nodes
   hosts: node1:node2
   become: true
-  gather_facts: false
+  gather_facts: true
+  vars_files:
+    - "{{ playbook_dir }}/vars/etcd.yml"
+    - "{{ playbook_dir }}/vars/tls.yml"
   tasks:
     - name: Import role bootstrap
       ansible.builtin.include_role:
@@ -13,8 +16,7 @@
       ansible.builtin.include_role:
         name: kubeconfig
       vars:
-        apiserver_ip: "{{ hostvars[inventory_hostname].ansible_facts.all_ipv6_addresses[-1] }}"
-        is_controlplane: true
+        apiserver_ip: "[{{ ansible_facts.all_ipv6_addresses[-1] }}]"
     - name: Import etcd role
       ansible.builtin.include_role:
         name: etcd
