--- a/tls/tasks/apiserver.yml
+++ b/tls/tasks/apiserver.yml
@@ -6,24 +6,37 @@
 - name: Generate API Server private key
   community.crypto.openssl_privatekey:
     path: /etc/kubernetes/pki/kube-apiserver.key
-    type: Ed25519
+    type: "{{ privatekey_type }}"
 - name: Generate API Server CSR
   community.crypto.openssl_csr:
+    basicConstraints_critical: true
+    basic_constraints:
+      - CA:FALSE
+    common_name: kube-apiserver
+    extKeyUsage_critical: false
+    extended_key_usage:
+      - clientAuth
+      - serverAuth
+    keyUsage:
+      - digitalSignature
+      - keyEncipherment
+    keyUsage_critical: true
     path: /etc/kubernetes/pki/kube-apiserver.csr
     privatekey_path: /etc/kubernetes/pki/kube-apiserver.key
-    common_name: 'kube-apiserver'
+    subject:
+      O: system:masters
+      OU: Kubernetes The Hard Way
     subject_alt_name:
       - IP:127.0.0.1
       - IP:{{ ansible_facts.all_ipv4_addresses[-1] }}
       - IP:{{ ansible_facts.all_ipv6_addresses[-1] }}
+      - DNS:localhost
+      - DNS:{{ inventory_hostname }}
       - DNS:kubernetes
       - DNS:kubernetes.default
       - DNS:kubernetes.default.svc
       - DNS:kubernetes.default.svc.cluster
       - DNS:kubernetes.default.svc.cluster.local
-    subject:
-      O: 'system:masters'
-      OU: 'Kubernetes The Hard Way'
 - name: Create API Server TLS certificate using CA key and cert
   community.crypto.x509_certificate:
     path: /etc/kubernetes/pki/kube-apiserver.crt
