--- a/tls/tasks/serviceaccount.yml
+++ b/tls/tasks/serviceaccount.yml
@@ -6,7 +6,7 @@
 - name: Generate Service Account private key
   community.crypto.openssl_privatekey:
     path: /etc/kubernetes/pki/serviceaccount.key
-    type: Ed25519
+    type: "{{ privatekey_type }}"
 - name: Generate Service Account CSR
   community.crypto.openssl_csr:
     path: /etc/kubernetes/pki/serviceaccount.csr
