wip(k8s): add initial kube-apiserver spin-up

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,3 +5,9 @@ gather_facts=false
 host_key_checking=false
 strategy=free
 forks=4
+
+gathering = smart
+gather_subset = all
+fact_caching = jsonfile
+fact_caching_connection = /tmp/facts.json
+fact_caching_timeout = 86400
