--- a/etcd/tasks/install.yml
+++ b/etcd/tasks/install.yml
@@ -3,7 +3,7 @@
   ansible.builtin.get_url:
     url: https://github.com/etcd-io/etcd/releases/download/{{ etcd_version }}/etcd-{{ etcd_version }}-linux-amd64.tar.gz
     dest: /tmp/etcd-linux-amd64.tar.gz
-    mode: '0644'
+    mode: "0644"
     checksum: sha256:{{ etcd_checksum }}
 - name: Ensure gzip is installed
   ansible.builtin.package:
@@ -14,10 +14,12 @@
     src: /tmp/etcd-linux-amd64.tar.gz
     dest: /usr/local/bin/
     remote_src: true
-    creates: /usr/local/bin/etcd
-    mode: '0755'
+    creates: /usr/local/bin/{{ item }}}
+    mode: "0755"
     include:
-      - etcd-{{ etcd_version }}-linux-amd64/etcd
-      - etcd-{{ etcd_version }}-linux-amd64/etcdctl
+      - etcd-{{ etcd_version }}-linux-amd64/{{ item }}
     extra_opts:
       - --strip-components=1
+  loop:
+    - etcd
+    - etcdctl
