--- a/tls/tasks/kubelet.yml
+++ b/tls/tasks/kubelet.yml
@@ -6,7 +6,7 @@
 - name: Generate kubelet private key
   community.crypto.openssl_privatekey:
     path: /etc/kubernetes/pki/kubelet.key
-    type: "{{ privatekey_type }}"
+    type: "{{ k8s_privatekey_type }}"
 - name: Generate kubelet CSR
   community.crypto.openssl_csr:
     path: /etc/kubernetes/pki/kubelet.csr
