--- a/k8s/tasks/configure.yml
+++ b/k8s/tasks/configure.yml
@@ -1,10 +1,13 @@
 - name: Copy API server systemd service files
   ansible.builtin.template:
-    src: kube-apiserver.service.j2
-    dest: /etc/systemd/system/kube-apiserver.service
+    src: "{{ item }}.service.j2"
+    dest: /etc/systemd/system/{{ item }}.service
     mode: "0644"
     owner: root
     group: root
+  loop:
+    - kube-apiserver
+    - kube-controller-manager
 - name: Start all the services
   ansible.builtin.systemd_service:
     name: "{{ item }}"
@@ -13,3 +16,4 @@
     daemon_reload: true
   loop:
     - kube-apiserver
+    - kube-controller-manager
