--- a/vars/k8s.yml
+++ b/vars/k8s.yml
@@ -1,2 +1,2 @@
 ---
-apiserver_ip: "{{ ansible_facts.all_ipv6_addresses[-1] }}"
+apiserver_ip: "{{ ansible_facts.all_ipv4_addresses | select('match', '^192.168.56') | first }}"
