--- a/worker/defaults/main.yml
+++ b/worker/defaults/main.yml
@@ -5,13 +5,13 @@ containerd_service_url: https://github.com/containerd/containerd/raw/v1.7.12/con
 runc_url: https://github.com/opencontainers/runc/releases/download/v1.1.11/runc.amd64
 cni_plugins_url: https://github.com/containernetworking/plugins/releases/download/v1.4.0/cni-plugins-linux-amd64-v1.4.0.tgz
 cni_plugins_checksum_url: https://github.com/containernetworking/plugins/releases/download/v1.4.0/cni-plugins-linux-amd64-v1.4.0.tgz.sha256
-crictl_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.29.0/crictl-v1.29.0-linux-amd64.tar.gz
-crictl_checksum_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.29.0/crictl-v1.29.0-linux-amd64.tar.gz.sha256
-kube_proxy_url: https://dl.k8s.io/release/v1.29.0/bin/linux/amd64/kube-proxy
-kubectl_url: https://dl.k8s.io/release/v1.29.0/bin/linux/amd64/kubectl
-kubelet_url: https://dl.k8s.io/release/v1.29.0/bin/linux/amd64/kubelet
+crictl_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.29.1/crictl-v1.29.1-linux-amd64.tar.gz
+crictl_checksum_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.29.1/crictl-v1.29.1-linux-amd64.tar.gz.sha256
+kubectl_url: https://dl.k8s.io/release/v1.29.1/bin/linux/amd64/kubectl
+kubelet_url: https://dl.k8s.io/release/v1.29.1/bin/linux/amd64/kubelet
 pod_subnet_cidr_v4: 10.88.0.0/16
 pod_subnet_cidr_v6: 2001:4860:4860::/64
 cluster_dns: 10.32.0.10
 cluster_domain: cluster.local
 kubelet_config_path: /var/lib/kubelet/config.yml
+cluster_cidr: 10.200.0.0/16
