--- a/tls/tasks/kubelet.yml
+++ b/tls/tasks/kubelet.yml
@@ -15,6 +15,8 @@
     subject:
       O: 'system:nodes'
       OU: 'Kubernetes The Hard Way'
+    subject_alt_name:
+      - DNS:{{ inventory_hostname }}
 - name: Create kubelet TLS certificate using CA key and cert
   community.crypto.x509_certificate:
     path: /etc/kubernetes/pki/kubelet.crt
