--- a/worker/defaults/main.yml
+++ b/worker/defaults/main.yml
@@ -1,17 +1,18 @@
----
-containerd_url: https://github.com/containerd/containerd/releases/download/v1.7.12/containerd-1.7.12-linux-amd64.tar.gz
-containerd_checksum_url: https://github.com/containerd/containerd/releases/download/v1.7.12/containerd-1.7.12-linux-amd64.tar.gz.sha256sum
-containerd_service_url: https://github.com/containerd/containerd/raw/v1.7.12/containerd.service
-runc_url: https://github.com/opencontainers/runc/releases/download/v1.1.11/runc.amd64
-cni_plugins_url: https://github.com/containernetworking/plugins/releases/download/v1.4.0/cni-plugins-linux-amd64-v1.4.0.tgz
-cni_plugins_checksum_url: https://github.com/containernetworking/plugins/releases/download/v1.4.0/cni-plugins-linux-amd64-v1.4.0.tgz.sha256
-crictl_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.29.1/crictl-v1.29.1-linux-amd64.tar.gz
-crictl_checksum_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.29.1/crictl-v1.29.1-linux-amd64.tar.gz.sha256
-kubectl_url: https://dl.k8s.io/release/v1.29.1/bin/linux/amd64/kubectl
-kubelet_url: https://dl.k8s.io/release/v1.29.1/bin/linux/amd64/kubelet
-pod_subnet_cidr_v4: 10.88.0.0/16
-pod_subnet_cidr_v6: 2001:4860:4860::/64
+cluster_cidr: 10.200.0.0/16
 cluster_dns: 10.32.0.10
 cluster_domain: cluster.local
+cni_plugins_checksum_url: https://github.com/containernetworking/plugins/releases/download/v1.4.0/cni-plugins-linux-amd64-v1.4.0.tgz.sha256
+cni_plugins_url: https://github.com/containernetworking/plugins/releases/download/v1.4.0/cni-plugins-linux-amd64-v1.4.0.tgz
+containerd_checksum_url: https://github.com/containerd/containerd/releases/download/v1.7.13/containerd-1.7.13-linux-amd64.tar.gz.sha256sum
+containerd_service_url: https://github.com/containerd/containerd/raw/v1.7.13/containerd.service
+containerd_url: https://github.com/containerd/containerd/releases/download/v1.7.13/containerd-1.7.13-linux-amd64.tar.gz
+crictl_checksum_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ k8s_version }}/crictl-{{ k8s_version }}-linux-amd64.tar.gz.sha256
+crictl_url: https://github.com/kubernetes-sigs/cri-tools/releases/download/{{ k8s_version }}/crictl-{{ k8s_version }}-linux-amd64.tar.gz
+kubectl_checksum_url: https://dl.k8s.io/release/{{ k8s_version }}/bin/linux/amd64/kubectl.sha256
+kubectl_url: https://dl.k8s.io/release/{{ k8s_version }}/bin/linux/amd64/kubectl
+kubelet_checksum_url: https://dl.k8s.io/{{ k8s_version }}/bin/linux/amd64/kubelet.sha256
 kubelet_config_path: /var/lib/kubelet/config.yml
-cluster_cidr: 10.200.0.0/16
+kubelet_url: https://dl.k8s.io/release/{{ k8s_version }}/bin/linux/amd64/kubelet
+pod_subnet_cidr_v4: 10.88.0.0/16
+pod_subnet_cidr_v6: 2001:4860:4860::/64
+runc_url: https://github.com/opencontainers/runc/releases/download/v1.1.12/runc.amd64
