--- a/worker/tasks/crictl.yml
+++ b/worker/tasks/crictl.yml
@@ -3,23 +3,11 @@
     url: "{{ crictl_url }}"
     dest: /tmp/
     mode: "0764"
+    checksum: "sha256:{{ lookup('url', crictl_checksum_url) | split | first }}"
   register: crictl_download
-- name: Download crictl checksum
-  ansible.builtin.get_url:
-    url: "{{ crictl_checksum_url }}"
-    dest: /tmp/
-    mode: "0764"
-  register: crictl_checksum
-- name: Verify crictl checksum
-  ansible.builtin.shell:
-    cmd: |
-      cd /tmp
-      sha256sum -c {{ crictl_checksum.dest }}
-  register: crictl_checksum_result
-  failed_when: crictl_checksum_result.rc != 0 or crictl_checksum_result.stdout.find('OK') == -1
 - name: Extract crictl binary
   ansible.builtin.unarchive:
     src: "{{ crictl_download.dest }}"
     dest: /usr/local/bin/
-    remote_src: yes
+    remote_src: true
     mode: "0755"
