--- a/worker/tasks/kubelet.yml
+++ b/worker/tasks/kubelet.yml
@@ -5,3 +5,4 @@
     owner: root
     group: root
     mode: "0755"
+    checksum: "sha256:{{ lookup('url', kubelet_checksum_url) | split | first }}"
