--- a/worker/tasks/prepare.yml
+++ b/worker/tasks/prepare.yml
@@ -7,6 +7,7 @@
       - socat
     state: present
     update_cache: true
+    cache_valid_time: 604800
 - name: Disable swap
   ansible.builtin.command: swapoff -a
   when: ansible_swaptotal_mb > 0
