--- a/prerequisites/tasks/main.yml
+++ b/prerequisites/tasks/main.yml
@@ -4,12 +4,10 @@
     content: net.ipv4.ip_forward = 1
     dest: /etc/sysctl.d/20-ipforward.conf
     mode: "0644"
-- name: Reload sysctl
-  ansible.builtin.shell: sysctl --system
-  changed_when: false
+  notify: Reload sysctl
 - name: Ensure python3-pip package is installed
   ansible.builtin.apt:
     name: python3-pip
     state: present
     update_cache: true
-    cache_valid_time: 604800
+    cache_valid_time: "{{ cache_valid_time }}"
