chore: remove deprecated gather subset and add inventory plugins

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,7 +7,11 @@ strategy=free
 forks=4
 
 gathering = smart
-gather_subset = all
 fact_caching = jsonfile
 fact_caching_connection = /tmp/facts.json
 fact_caching_timeout = 86400
+
+[inventory]
+enable_plugins = 'host_list', 'script', 'auto', 'yaml', 'ini', 'toml'
+cache = yes
+cache_connection = /tmp/ansible_inventory
