--- a/tls/tasks/kubelet.yml
+++ b/tls/tasks/kubelet.yml
@@ -1,8 +1,3 @@
-- name: Ensure CA directory exists
-  ansible.builtin.file:
-    path: /etc/kubernetes/pki
-    state: directory
-    mode: "0750"
 - name: Generate kubelet private key
   community.crypto.openssl_privatekey:
     path: /etc/kubernetes/pki/kubelet.key
@@ -16,6 +11,7 @@
       O: 'system:nodes'
       OU: 'Kubernetes The Hard Way'
     subject_alt_name:
+      - IP:{{ hostvars[inventory_hostname].ansible_facts.all_ipv4_addresses | select('match', '^192.168.56') | first }}
       - DNS:{{ inventory_hostname }}
 - name: Create kubelet TLS certificate using CA key and cert
   community.crypto.x509_certificate:
@@ -26,21 +22,3 @@
     ownca_privatekey_path: /vagrant/share/ca.key
     provider: ownca
     ownca_not_after: +365d
-  retries: 120
-  delay: 5
-  register: cert
-  until: cert is succeeded
-- name: Ensure /vagrant/share/ exists
-  ansible.builtin.file:
-    path: /vagrant/share/
-    state: directory
-    mode: "0755"
-- name: Copy kubelet TLS certificate to /vagrant/share/
-  ansible.builtin.copy:
-    src: /etc/kubernetes/pki/{{ item }}
-    dest: /vagrant/share/{{ inventory_hostname }}-{{ item }}
-    mode: "0640"
-    remote_src: true
-  loop:
-    - kubelet.crt
-    - kubelet.key
