chore: run admin TLS generation only once

--- a/tls/tasks/main.yml
+++ b/tls/tasks/main.yml
@@ -13,6 +13,7 @@
 - name: Create admin operator TLS certificate
   ansible.builtin.include_tasks:
     file: admin.yml
+  when: lookup('file', '/vagrant/share/admin.crt', errors='ignore') is not defined
 - name: Create service accounts TLS certificate
   ansible.builtin.include_tasks:
     file: serviceaccount.yml
